--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+  <title>Doge's personal website</title>
+  <body>
+   <fieldset><a href=->Go back to main site</a></fieldset>
+<h2 class="text"> About me:
 
+<p>Zodiac sign: Capricorn</p> <p>Birthday: January 2010</p>
+  <p>Country: Canada</p>
+  <p>Gender: Male</p>
+  <p>Pronouns: he/him</p>
+  <p>Sexuality: Gay</p>
+  <p>I like Frutiger Aero</p>
+    
+  <img src="https://preview.redd.it/am-i-the-only-one-that-feels-like-these-need-to-be-seperate-v0-a3jnn3g1oirb1.jpg?width=1024&format=pjpg&auto=webp&s=8c1812a91ed77d73aa3a224b197afcec9ede6b7a" alt="Frutiger Aero">
+   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <style>
+    .clock {
+  margin-left: 1750px;
+}
+
+
+fieldset {
+ text-align: center;
+-webkit-border-radius: 22px;
+-moz-border-radius: 22px;
+border-radius: 22px;
+coor: rgb(255, 255, 255)
+}
+
+.title {
+   font-family: montserrat;
+  text-align: center;
+  color: blue;
+
+}
+
+.text {
+  text-align: center;
+  color: blue;
+  font-family: montserrat;
+  margin-left: 50px;
+  
+}
+
+body {
+  font-family: montserrat;
+  background-color: black
+ 
+}
+
+p {
+ text-align: center;
+ font-size: 20px;
+}
+  </style>
+  </body>
+</head>
+  </html>
