--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-  <title>Doge's personal website</title>
+  <title>About me - Doge's personal website</title>
   <body>
    <fieldset><a href=->Go back to main site</a></fieldset>
 <h2 class="text"> About me:
@@ -13,8 +13,7 @@
   <p>Pronouns: he/him</p>
   <p>Sexuality: Gay</p>
   <p>I like Frutiger Aero</p>
-    
-  <img src="https://preview.redd.it/am-i-the-only-one-that-feels-like-these-need-to-be-seperate-v0-a3jnn3g1oirb1.jpg?width=1024&format=pjpg&auto=webp&s=8c1812a91ed77d73aa3a224b197afcec9ede6b7a" alt="Frutiger Aero">
+  
    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <style>
     .clock {
