--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8" />
   <title>About me - Doge's personal website</title>
   <body>
-   <fieldset><a href=->Go back to main site</a></fieldset>
+   <fieldset><a href='https://ctrlaltdel-html.github.io/doges-website-main/'>Go back to main site</a></fieldset>
 <h2 class="text"> About me:
 
 <p>Zodiac sign: Capricorn</p> <p>Birthday: January 2010</p>
   <p>Country: Canada</p>
   <p>Gender: Male</p>
   <p>Pronouns: he/him</p>
-  <p>Sexuality: Gay</p>
   <p>I like Frutiger Aero</p>
   
    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
