--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
   <title>About me - Doge's personal website</title>
   <body>
-   <fieldset><a href='https://ctrlaltdel-html.github.io/doges-website-main/'>Go back to main site</a></fieldset>
+   <fieldset><a href="https://ctrlaltdel-html.github.io/doges-website-main/">Go back to main site</a></fieldset>
 <h2 class="text"> About me:
 
 <p>Zodiac sign: Capricorn</p> <p>Birthday: January 2010</p>
