--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-  <title>About me - Doge's personal website</title>
+<head>
+<meta http-equiv="refresh" content="2;url=https://ctrlaltdel-html.github.io/dogesite2" />
+<title>Old page</title>
+</head>
+  <title>Redirection</title>
   <body>
-   <fieldset><a href="https://ctrlaltdel-html.github.io/doges-website-main/">Go back to main site</a></fieldset>
-<h2 class="text"> About me:
 
-<p>Zodiac sign: Capricorn</p> <p>Birthday: January 2010</p>
-  <p>Country: Canada</p>
-  <p>Gender: Male</p>
-  <p>Pronouns: he/him</p>
-  <p>I like Frutiger Aero</p>
+<h2 class="text"> We are redirecting you to the new site :D</h2>
+
+
   
    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <style>
